<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app__name">AS_Service</string>
    <string name="sign_up">회원가입</string>
    <string name="sign_in">로그인</string>
    <string name="password">비밀번호</string>
    <string name="id">아이디</string>
    <string name="cancel">취소</string>
    <string name="sign_up_ok">생성</string>
    <string name="re_password">비밀번호 확인</string>
    <string name="phone">핸드폰 번호</string>
    <string name="submit">제출</string>
    <string name="main_name">AS Service</string>
    <string name="email">이메일</string>
    <string name="sign_up_helper">\' - \' 없이 입력해주세요</string>
    <string name="error_email">이메일 형식이 올바르지 않습니다</string>
    <string name="error_pwd_matching">비밀번호가 서로 일치하지 않습니다</string>
    <string name="error_phone">핸드폰 번호 형식이 올바르지 않습니다</string>
    <string name="error_not_input">모든 항목을 입력해주세요</string>
    <string name="error_check_status">아이디와 비밀번호를 확인해주세요</string>
    <string name="error_input">모든 항목을 올바르게 입력해주세요</string>
    <string name="success_signup">회원가입을 완료했습니다</string>
    <string name="cqi_colon">공기질 통합지수 :</string>
    <string name="virus_colon">바이러스 위험지수 :</string>
    <string name="air_condition">공기질 데이터</string>
    <string name="change_temp">금일 온도 변화량</string>
    <string name="online">동작중</string>
    <string name="device_status">장치 정보</string>
    <string name="category">좋음 보통 나쁨 매우나쁨</string>
    <string name="missing_password">비밀번호를 잊으셨나요?</string>
    <string name="location">위치</string>
    <string name="detail_sn">시리얼 넘버 :</string>
    <string name="add_device">장치 등록하기</string>
    <string name="next">다음</string>
    <string name="serial_title">장치 하단에 적힌 일련번호를 입력해주세요</string>
    <string name="serial_number">시리얼 넘버</string>
    <string name="serial_error">올바른 시리얼번호가 아닙니다</string>
    <string name="apply">등록</string>
    <string name="name">이름</string>
    <string name="degree">˚C</string>
    <string name="msg_token_fmt">FCM 토큰</string>
    <string name="good">좋음</string>
    <string name="normal">보통</string>
    <string name="bad">나쁨</string>
    <string name="very_bad">매우나쁨</string>
    <string name="error">에러</string>

</resources>