<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/modeViewColor"
            tools:context=".view.DeviceDetailActivity">
            <ImageView
                android:id="@+id/detailBookMark"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="15dp"
                android:src="@drawable/star_empty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/detailBack"
                app:layout_constraintBottom_toBottomOf="@+id/detailBack"/>

            <ImageView
                android:id="@+id/detailBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/back"
                android:background="?android:attr/selectableItemBackground"
                app:tint="@color/modeTextColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="12dp"
                android:layout_marginStart="15dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toEndOf="@+id/detailBack"
                app:layout_constraintEnd_toStartOf="@+id/detailBookMark"
                app:layout_constraintTop_toTopOf="@+id/detailBack"
                app:layout_constraintBottom_toBottomOf="@+id/detailBack">
                <TextView
                    android:id="@+id/detailName"
                    style="@style/detailTextStyle"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:transitionName="deviceNameTran"/>

                <ImageView
                    android:id="@+id/detailRightArrow"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/right_arrow" />

                <TextView
                    android:id="@+id/detailDeviceBusiness"
                    style="@style/detailTextStyle"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="20sp"
                    android:transitionName="businessTypeTran"/>
            </LinearLayout>

            <TextView
                android:id="@+id/detailSnTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="시리얼 넘버 : "
                android:textAllCaps="false"
                android:textColor="@color/gray"
                android:textSize="17sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@+id/detailBack"
                app:layout_constraintTop_toBottomOf="@+id/detailBack" />

            <TextView
                android:id="@+id/detailSN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                android:textSize="18sp"
                android:textStyle="italic"
                android:transitionName="serialNumberTran"
                app:layout_constraintBottom_toBottomOf="@+id/detailSnTitle"
                app:layout_constraintStart_toEndOf="@+id/detailSnTitle"
                app:layout_constraintTop_toTopOf="@+id/detailSnTitle" />

            <ImageView
                android:id="@+id/detailDeviceType"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="30dp"
                android:transitionName="imageTran"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailSnTitle" />

            <androidx.cardview.widget.CardView
                android:id="@+id/detailFanCard"
                android:layout_width="65dp"
                android:layout_height="65dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/detailDeviceType"
                app:layout_constraintStart_toEndOf="@+id/detailDeviceType"
                app:layout_constraintBottom_toTopOf="@+id/detailPowerCard"
                app:cardCornerRadius="50dp"
                android:elevation="10dp"
                android:translationZ="10dp"
                android:layout_marginBottom="10dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/fan"
                    android:background="@drawable/detail_control_fan_bg"
                    android:padding="18dp"
                    android:layout_gravity="center"
                    app:tint="@color/white"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/detailPowerCard"
                android:layout_width="65dp"
                android:layout_height="65dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailFanCard"
                app:layout_constraintBottom_toBottomOf="@+id/detailDeviceType"
                app:layout_constraintStart_toEndOf="@+id/detailDeviceType"
                app:cardCornerRadius="50dp"
                android:elevation="10dp"
                android:translationZ="10dp"
                android:layout_marginTop="10dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/power"
                    android:background="@drawable/detail_control_power_bg"
                    android:padding="18dp"
                    android:layout_gravity="center"
                    app:tint="@color/white"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/detailDeviceOnline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/detailDeviceType"
                app:layout_constraintEnd_toEndOf="@+id/detailDeviceType"
                app:layout_constraintTop_toBottomOf="@+id/detailDeviceType"
                android:text="@string/online"
                android:textSize="15sp"
                android:textAllCaps="false"
                android:textColor="@color/green"
                app:drawableStartCompat="@drawable/circle"
                app:drawableTint="@color/green"
                android:drawablePadding="2dp"/>

            <TextView
                android:id="@+id/detailAirCondTitle"
                style="@style/detailTextStyle"
                android:layout_marginTop="18dp"
                android:text="@string/air_condition"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/detailBack"
                app:layout_constraintTop_toBottomOf="@+id/detailDeviceOnline" />

            <TextView
                android:id="@+id/detailAirCondTimeLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/detailAirCondTitle"
                app:layout_constraintTop_toTopOf="@+id/detailAirCondTitle"
                app:layout_constraintBottom_toBottomOf="@+id/detailAirCondTitle"
                android:text="5:23 AM"
                android:layout_marginStart="5dp"
                android:textSize="15sp"
                android:textColor="@color/gray"
                android:textAllCaps="false"
                android:layout_marginBottom="3dp"
                app:drawableStartCompat="@drawable/circle"
                android:drawablePadding="5dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/detailAirCondRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never"
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/detailAirCondTitle"
                tools:listitem="@layout/detail_air_item"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            <TableRow
                android:id="@+id/detailAirCondCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="@+id/detailAirCondTimeLine"
                app:layout_constraintBottom_toBottomOf="@+id/detailAirCondTimeLine"
                app:layout_constraintEnd_toEndOf="@+id/detailBookMark">

                <TextView
                    android:layout_width="wrap_content"
                    android:text="※"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:textColor="@color/gray"/>

                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:text="@string/good"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    android:textColor="@color/progressGood"/>
                <TextView
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:text="@string/normal"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    android:textColor="@color/progressNormal"/>
                <TextView
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:text="@string/bad"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    android:textColor="@color/progressBad"/>
                <TextView
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:text="@string/very_bad"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    android:textColor="@color/progressWorst"/>
            </TableRow>

            <TextView
                android:id="@+id/detailChangeTempTitle"
                style="@style/detailTextStyle"
                android:text="@string/change_temp"
                app:layout_constraintTop_toBottomOf="@+id/detailAirCondRecyclerView"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/detailAirCondTitle"/>

            <TextView
                android:id="@+id/detailChangeTempTimeLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/detailChangeTempTitle"
                app:layout_constraintTop_toTopOf="@+id/detailChangeTempTitle"
                app:layout_constraintBottom_toBottomOf="@+id/detailChangeTempTitle"
                android:text="2022-01-26"
                android:layout_marginStart="5dp"
                android:textSize="15sp"
                android:textColor="@color/gray"
                android:textAllCaps="false"
                android:layout_marginBottom="3dp"
                app:drawableStartCompat="@drawable/circle"
                android:drawablePadding="5dp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/detailCardView1"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintTop_toBottomOf="@+id/detailChangeTempTitle">
                <ImageView
                    android:id="@+id/detailChangeTempGraph"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/graph"/>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
